[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "gendiff Compares two configuration files and shows a difference."
classifiers = [
    "Topic :: Utilities"
]
authors = ["Ian Chechin <delnor40rus@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"